draft: channels - emotional cues

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-05-08 18:28:25 +0200 
+%% Created for Marc Fabel at 2020-07-20 11:03:07 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,38 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@article{rees2009college,
+	Author = {Rees, Daniel I and Schnepel, Kevin T},
+	Date-Added = {2020-07-20 10:58:32 +0200},
+	Date-Modified = {2020-07-20 11:03:07 +0200},
+	Journal = {{Journal of Sports Economics}},
+	Number = {1},
+	Pages = {68--87},
+	Publisher = {Sage Publications Sage CA: Los Angeles, CA},
+	Title = {{College Football Games and Crime}},
+	Volume = {10},
+	Year = {2009}}
+
+@article{berkowitz1989frustration,
+	Author = {Berkowitz, Leonard},
+	Date-Added = {2020-07-20 10:56:06 +0200},
+	Date-Modified = {2020-07-20 11:01:50 +0200},
+	Journal = {{Psychological Bulletin}},
+	Number = {1},
+	Pages = {59},
+	Publisher = {American Psychological Association},
+	Title = {{Frustration-aggression hypothesis: Examination and reformulation.}},
+	Volume = {106},
+	Year = {1989}}
+
+@book{dollard1939frustration,
+	Author = {Dollard, John and Miller, Neal E and Doob, Leonard W and Mowrer, Orval Hobart and Sears, Robert R},
+	Date-Added = {2020-07-20 10:54:12 +0200},
+	Date-Modified = {2020-07-20 11:02:47 +0200},
+	Publisher = {Yale University Press},
+	Title = {Frustration and aggression.},
+	Year = {1939}}
 
 @article{card2011family,
 	Abstract = {{We study the link between family violence and the emotional cues associated with wins and losses by professional football teams. We hypothesize that the risk of violence is affected by the ``gain-loss'' utility of game outcomes around a rationally expected reference point. Our empirical analysis uses police reports of violent incidents on Sundays during the professional football season. Controlling for the pregame point spread and the size of the local viewing audience, we find that upset losses (defeats when the home team was predicted to win by four or more points) lead to a 10\\% increase in the rate of at-home violence by men against their wives and girlfriends. In contrast, losses when the game was expected to be close have small and insignificant effects. Upset wins (victories when the home team was predicted to lose) also have little impact on violence, consistent with asymmetry in the gain-loss utility function. The rise in violence after an upset loss is concentrated in a narrow time window near the end of the game and is larger for more important games. We find no evidence for reference point updating based on the halftime score.}},
