draft: channels - game/team prominence

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-07-20 11:03:07 +0200 
+%% Created for Marc Fabel at 2020-07-22 14:30:42 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,26 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@article{wann1993sports,
+	Author = {Wann, Daniel L and Branscombe, Nyla R},
+	Date-Added = {2020-07-22 14:28:11 +0200},
+	Date-Modified = {2020-07-22 14:28:48 +0200},
+	Journal = {{International Journal of Sport Psychology}},
+	Publisher = {Edizioni Luigi Pozzi},
+	Title = {Sports fans: Measuring degree of identification with their team.},
+	Year = {1993}}
+
+@article{nassauer2011hate,
+	Author = {Nassauer, Anne},
+	Date-Added = {2020-07-21 19:23:23 +0200},
+	Date-Modified = {2020-07-21 19:24:03 +0200},
+	Journal = {{Journal of Hate Studies}},
+	Number = {1},
+	Pages = {199--220},
+	Title = {{From Hate to Collective Violence: Research and Practical Implications}},
+	Volume = {9},
+	Year = {2011}}
 
 @article{rees2009college,
 	Author = {Rees, Daniel I and Schnepel, Kevin T},
