--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -142,14 +142,14 @@ labelfont={bf}
   citecolor   = darkblue,
  	linkcolor   = darkblue,
   urlcolor    = darkblue 
-} % macht die URLS blau   
-     
+} % macht die URLS blau 
+ 
 \usepackage{lettrine}	% First letter capitalized
 
 % have date in month year format (i.e. omit the day in dates)
 \usepackage{datetime}
 \newdateformat{monthyeardate}{%
-  \monthname[\THEMONTH], \THEYEAR}
+\monthname[\THEMONTH], \THEYEAR}
 %--------------------------------------------------------------------
 %	AUTHOR & TITLE
 %--------------------------------------------------------------------
@@ -174,16 +174,16 @@ labelfont={bf}
 %	BEGIN DOCUMENT
 %--------------------------------------------------------------------
 \begin{document}
-\setcounter{page}{0}  
+\setcounter{page}{0}
 % \tableofcontents
 \newpage
-\setcounter{page}{1}    
+\setcounter{page}{1}
 \maketitle
 
 
 \renewcommand{\abstractname}{\vspace{-\baselineskip}} % GET RID OF ABSTRACT TITLE
 \begin{abstract}\noindent 
-  \footnotesize{\begin{center}\textbf{Abstract}\end{center} Place abstract here\\\newline \textbf{Keywords:} soccer games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
+	\footnotesize{\begin{center}\textbf{Abstract}\end{center} Place abstract here\\\newline \textbf{Keywords:} soccer games, violent crime, assaults. \newline \textbf{JEL codes:} J19, K42, Z13, Z29.}
 
 \end{abstract}
 
@@ -198,7 +198,7 @@ labelfont={bf}
 \section{Introduction}\label{sec_soc_ext:introduction}
 
 
-hello what 
+football is synonymous with soccer 
 
 
 
@@ -229,7 +229,7 @@ In order to identify the causal effect of soccer matches on criminal behavior, I
 The identification strategy is based on a generalized difference-in-differences approach to study the impact of a soccer match on violent behavior. Let Assaults$_{rdmy}$ denote the assault rate in region $r$, on day-of-the-week $d$, in month $m$ and year $y$, which in the simple baseline model is given by:\footnote{For ease of comparison, the assault rate is defined as the number of assaults per 100,000 individuals multiplied with the number of days per year. For details, refer to \cite{hener2019noise}.}
 
 \begin{align}
-	\text{Assaults}_{rdmy} = \alpha + \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \underbrace{\gamma_d +  \eta_m + \theta_y}_{\text{date}_{dmy}} + \lambda \mathbf{X}_{rdmy} + \varepsilon_{rdmy}
+	\text{Assaults}_{rdmy} = \alpha + \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \underbrace{\gamma_d + \eta_m + \theta_y}_{\text{date}_{dmy}} + \lambda \mathbf{X}_{rdmy} + \varepsilon_{rdmy}
 	\label{eq_soc_ext:model}.
 \end{align}
 
@@ -265,7 +265,7 @@ The crime data is coming from the German Police Crime Statistics (Polizeiliche K
 
 The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per 100,000 inhabitants, and multiplied by 365 in order to mirror annual crime rates. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code of 'intentional simple bodily injury' (Vorsätzliche einfache Körperverletzung § 223 StGB). There are roughly 120 types of criminal offenses in use (recorded in 6 digit codes), though the vast majority of the cases concentrate on only a handful of codes.\footnote{The top 10 of the most prevalent crime keys comprise more than 90\% of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} shows the distribution of cases per crime key for the twenty most common offense types in 2014. The intentional simple bodily injury is by far the most prevalent offense and it contributes to about 45\% of all cases. The prevalence of the offense type and its association with aggression motivates the decision to have assaults in this definition as the main outcome variable.
 
-Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15\% of the observations do not contain information on the hour. This does not entail any consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults is increasing over the course of a day and peaks around midnight. In order to assign the cases that occur during the early hours to the day, in which they are rooted in, I define a day as running from 6:00 AM until 5:59 AM. Panel B shows the distribution of assaults across days of the week. You can see higher values on Friday and Saturday, whereas the other days have assault rates belonging to the same ballpark. Panel C shows that the number of assaults have a strong seasonal pattern with the highest value recorded in May, and the smallest figure in August.\footnote{Panel C shows the number of assaults across months of the year while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New year's eve is a particular impressive outlier in this context. \footnote{Panels C and D are showing data for the year 214 only. Appendix Figure  \ref{fig_soc_ext:assault_year_distribution} shows the distribution per day for different years.}
+Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15\% of the observations do not contain information on the hour. This does not entail any consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults is increasing over the course of a day and peaks around midnight. In order to assign the cases that occur during the early hours to the day, in which they are rooted in, I define a day as running from 6:00 AM until 5:59 AM. Panel B shows the distribution of assaults across days of the week. You can see higher values on Friday and Saturday, whereas the other days have assault rates belonging to the same ballpark. Panel C shows that the number of assaults have a strong seasonal pattern with the highest value recorded in May, and the smallest figure in August.\footnote{Panel C shows the number of assaults across months of the year while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New year's eve is a particular impressive outlier in this context. \footnote{Panels C and D are showing data for the year 214 only. Appendix Figure \ref{fig_soc_ext:assault_year_distribution} shows the distribution per day for different years.}
 
 % XXX per day roughly around 320 per day, peak on new year's eve, high on holidays (carneval) 
 \textbf{XXX delete June, as there are no games played in that month}
@@ -283,7 +283,7 @@ When investigating channels of how soccer games can affect assaults, I exploit b
 
 
 \subsection{Weather data}
-The weather data comes from Germany's National Meteorological Service (Deutscher Wetterdienst). In order to construct the weather control variables, I use the sample of weather monitors, which measure relevant weather variables all at the same time.\footnote{I use the following weather variables as daily averages: the daily average, minimum and maximum air temperature,  minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth, and wind velocity.} From this set of monitors I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_nearest_monitor}. The quality of the matches between weather monitors and stadiums is high, as the average distance between stadiums and monitors is 15 kilometers. The distribution of the distance of monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}. Few of the  weather variables have missing data, which are filled in the following way: propagate the last valid observation forward to the next valid observation (i.e. forward fill).\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2\%), snow depth (<0.6\%).}
+The weather data comes from Germany's National Meteorological Service (Deutscher Wetterdienst). In order to construct the weather control variables, I use the sample of weather monitors, which measure relevant weather variables all at the same time.\footnote{I use the following weather variables as daily averages: the daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth, and wind velocity.} From this set of monitors I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_nearest_monitor}. The quality of the matches between weather monitors and stadiums is high, as the average distance between stadiums and monitors is 15 kilometers. The distribution of the distance of monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}. Few of the weather variables have missing data, which are filled in the following way: propagate the last valid observation forward to the next valid observation (i.e. forward fill).\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2\%), snow depth (<0.6\%).}
 
 
 
@@ -331,7 +331,7 @@ After establishing that soccer games lead to more assaults, I shed some light on
 
 % crime characteristics
 In the next step, I consider effect heterogeneity by crime characteristics. Columns 2-5 of Table \ref{tab_soc_ext:reg_fe_assrate_crime_chars} show the heterogeneity of the effect by the time of the offense. The impact of a soccer game on the assault rate is smallest in summer months with 1.482 assaults per million population, corresponding to an increase of 13.4\%. The summer months (July and August) are the time when the soccer season starts and results are not yet so important. The estimates are higher (but not significantly different from each other) during other times of the season. Columns 6 and 7 consider effect heterogeneity by assault execution. I find that the effects of soccer games on the assault rate are mostly driven by 'successfully' committed offenses with by on average 2.310 additional assaults per million population.
-{\color{red}  type of charge}
+{\color{red} type of charge}
 
 
 
@@ -344,7 +344,7 @@ In the next step, I consider effect heterogeneity by crime characteristics. Colu
 Previously I showed evidence that soccer games increase the assault rate. However, it could very well be that I only pick up an effect that displaces offenses. It is possible that the increase in violent behavior is offset by a reduction in assaults in other areas or at different times \citep{lindo2018college}. In other words, the assault would have been committed anyway, but just at a different time or at another location. One potential explanation for that are different population flows around days on which games take place.
 
 % spatial displacement
-In order to estimate \textit{spatial displacement effects}, I investigate the impact of  soccer matches on nearby regions. I define neighboring regions to constitute nearby regions. A neighbor region is a municipality that shares a common boundary with a region that contains a stadium.\footnote{If there are two municipalities that share a common border and each of the regions contains a stadium, both regions will not serve as neighbor regions and they are dismissed from the set of spatial spillover candidates.} Figure \ref{fig_soc_ext:map_neighboring_regions} shows a map of the selected regions. The sample of neighboring regions exhibits a considerably higher number of observations. This is owed to the fact that a region with a stadium has, on average, a bit more than 11 neighbor municipalities. Table \ref{tab_soc_ext:reg_fe_assrate_neighbor_regions} shows the estimates of the impact of a home game on these neighboring regions. In comparison to the baseline effects, the coefficients of spillover effects across space are small and not significantly different from zero. Consequently, the results do not suggest that offsetting spatial spillover effects are present.
+In order to estimate \textit{spatial displacement effects}, I investigate the impact of soccer matches on nearby regions. I define neighboring regions to constitute nearby regions. A neighbor region is a municipality that shares a common boundary with a region that contains a stadium.\footnote{If there are two municipalities that share a common border and each of the regions contains a stadium, both regions will not serve as neighbor regions and they are dismissed from the set of spatial spillover candidates.} Figure \ref{fig_soc_ext:map_neighboring_regions} shows a map of the selected regions. The sample of neighboring regions exhibits a considerably higher number of observations. This is owed to the fact that a region with a stadium has, on average, a bit more than 11 neighbor municipalities. Table \ref{tab_soc_ext:reg_fe_assrate_neighbor_regions} shows the estimates of the impact of a home game on these neighboring regions. In comparison to the baseline effects, the coefficients of spillover effects across space are small and not significantly different from zero. Consequently, the results do not suggest that offsetting spatial spillover effects are present.
 
 % temporal displacement
 In the next step, \textit{temporal displacement effects} are being considered. To capture this possibility, I include one day leads and lags of the game day indicator. Table \ref{tab_soc_ext:reg_fe_assrate_leads_lags} contains the estimates when enriching the baseline model with the temporal spillover components. The estimates of the gameday itself are not significantly different from the baseline model. The coefficients of one day before and after the game are almost always small in magnitude and not statistically significant. Only exception is the estimate of the day before the game in column 4, which implies that a soccer game leads to an average increase of 0.352 assaults per million population on the day before a game. The positive coefficient, however, does not suggest temporal displacement effects, which would require a negative estimate. This rather indicates additional assaults due to activities on the day preceding important games. 
@@ -364,50 +364,22 @@ This section investigates potential mechanisms of how soccer games can lead to a
 
 
 % emotional cues
-In the first step, I consider emotional cues as potential channels of how soccer games can affect assault rates. This is motivated by the findings of \cite{card2011family} who demonstrate that unexpected losses of local football teams spur family violence. The results fit well into the context of the frustration-aggression hypothesis, first proposed by \cite{dollard1939frustration}, which predicts belligerent behavior in the event of frustrating events.\footnote{\cite{berkowitz1989frustration} presents a good overview about the frustration-aggression hypothesis.} \cite{rees2009college} show in a similar fashion that there are more violent offenses when the local football team loses. For this reason, I analyze in Table \ref{tab_soc_ext:reg_fe_assrate_emotional_cues} whether visceral factors may be the reason for the additional assaults. Column 1 investigates whether the mere existence of an emotionally upsetting event during a game leads to a higher assault rate. To answer this question, I build an index that equals one for games in which there happens at least one of the following potentially unsettling events:  a penalty is awarded (20\% of all games), a red card is being issued (10\% of all games), or the referee receives a non-sufficient grade (15\% of all games). The index shows that 35\% of all games experience at least one upsetting episode as defined in the previous categories. The estimates in column 1 do not suggest that emotional cues trigger more violent behavior as the estimates for games with and without upsetting events are not significantly different from each other. 	In the second and third column I show estimates following the approach of \cite{card2011family}, in which I examine the impact of game outcomes relative to their pregame expectations. Pregame expectations are included in the analysis as matches with contrasting predictions may be very different from each other. By including predicted outcomes, you can estimate the effect when a team is expected to win but loses, and vice versa. Using data from oddsportal.com, I define a game too close to be predictable when the absolute probability difference between win and loss is smaller than 20 percent.\footnote{Similar results are obtained when defining other threshold values and when I deviate from the symmetry around the origin.} When the spread's value is exceeding the threshold then the home game is expected to win or lose, respectively. Around 45\% of the games are expected to be close or to be won, while 10\% of the games are expected to be lost. The significantly larger share of wins may be attributed to the home-advantage. Column 2 starts out by examining the effects of matches with distinct predicted match outcomes. The estimates do not suggest that the effect of games with different predicted outcomes differ systematically from each other. In column 3, I include additionally interactions between expected and true game outcomes. The estimates are relatively small in magnitude and not significantly different from zero, implying that unexpected wins/losses do not cause additional assaults. Taken all together, there is no evidence that emotional cues drive violent behavior in the context of professional soccer games in Germany.
+In the first step, I consider emotional cues as potential channels of how soccer games can affect assault rates. This is motivated by the findings of \cite{card2011family} who demonstrate that unexpected losses of local football teams spur family violence. The results fit well into the context of the frustration-aggression hypothesis, first proposed by \cite{dollard1939frustration}, which predicts belligerent behavior in the event of frustrating events.\footnote{\cite{berkowitz1989frustration} presents a good overview about the frustration-aggression hypothesis.} \cite{rees2009college} show in a similar fashion that there are more violent offenses when the local football team loses. For this reason, I analyze in Table \ref{tab_soc_ext:reg_fe_assrate_emotional_cues} whether visceral factors may be the reason for the additional assaults. Column 1 investigates whether the mere existence of an emotionally upsetting event during a game leads to a higher assault rate. To answer this question, I build an index that equals one for games in which there happens at least one of the following potentially unsettling events: a penalty is awarded (20\% of all games), a red card is being issued (10\% of all games), or the referee receives a non-sufficient grade (15\% of all games). The index shows that 35\% of all games experience at least one upsetting episode as defined in the previous categories. The estimates in column 1 do not suggest that emotional cues trigger more violent behavior as the estimates for games with and without upsetting events are not significantly different from each other. 	In the second and third column I show estimates following the approach of \cite{card2011family}, in which I examine the impact of game outcomes relative to their pregame expectations. Pregame expectations are included in the analysis as matches with contrasting predictions may be very different from each other. By including predicted outcomes, you can estimate the effect when a team is expected to win but loses, and vice versa. Using data from oddsportal.com, I define a game too close to be predictable when the absolute probability difference between win and loss is smaller than 20 percent.\footnote{Similar results are obtained when defining other threshold values and when I deviate from the symmetry around the origin.} When the spread's value is exceeding the threshold then the home game is expected to win or lose, respectively. Around 45\% of the games are expected to be close or to be won, while 10\% of the games are expected to be lost. The significantly larger share of wins may be attributed to the home-advantage. Column 2 starts out by examining the effects of matches with distinct predicted match outcomes. The estimates do not suggest that the effect of games with different predicted outcomes differ systematically from each other. In column 3, I include additionally interactions between expected and true game outcomes. The estimates are relatively small in magnitude and not significantly different from zero, implying that unexpected wins/losses do not cause additional assaults. Taken all together, there is no evidence that emotional cues drive violent behavior in the context of professional soccer games in Germany.
+
+
+
+% game/team prominence (rivals & league)
+Second, I use information about game and team prominence as potential channels. For many sport fans, the affection for the own soccer team plays a central role \citep{wann1993sports}. Almost as important as the passion for the own team is the cultivation of animosities against rivals. Often resentments and hatred can translate into violent actions \citep{nassauer2011hate}. In order to test the hypothesis that the additional assaults are the result of feelings of dislike, I compare the impact of matches in which known rival teams are playing against each other to regular matches. To answer this question, the game day indicator of equation \ref{eq_soc_ext:model} is replaced by an interaction with a dummy variable that equals one for rival matches. The estimates are shown in columns 1 and 2 of Table \ref{tab_soc_ext:reg_fe_assrate_prominent_games}. Games that are classified as rival matches lead to an average increase of 7.976 assaults per million population. This corresponds to almost three times the baseline effect. Although the standard errors are relatively large, as only 2\% of the games are classified as rival matches, the effect is significantly different from regular matches. Next to the explanation of mutual dislike of opposing fan groups, it could be the mere prominence of teams/games that attract more people. As shown in Figure \ref{fig_soc_ext:descriptives_matches_time_attendance}, attendance varies substantially across the tiers of the German football league system. Columns 3-5 shows the effect of games by the league in which the teams are playing. The largest effect is in the highest tier, the Bundesliga, in which a game leads to a rise in the assault rate by, on average, 3.530 assaults per million population. The impact of matches from the first league are significantly larger than the effect of matches from the other two leagues.  
+Summing up, there is evidence that the prominence of games are a crucial determinant for the size of the effect of soccer matches on the assault rate, where rival matches and games in the top league lead to more assaults.
+
+
+% Machine Learning application: effect heterogeneity in other dimensions
+{\color{red} missing: ML application: do I find evidence for deprived regions?}\newline
+sample split: larger effects rural (2x basline), ue rate no effect 
 
 
 
 
-
-
-
-
-
-
-
-\subsection{Channels}
-\begin{itemize}
-	\item Emotional cues (unexpected losses)
-	\item Prominent games/teams (derby, rivalry, BL/2L/3L), covariate space that was scraped from kicker and transfermarkt
-	\item ML application -> deprived regions? (region characteristics)
-\end{itemize}	
-
-
-
-
-\vspace*{\fill}
-\begin{table}[H] \centering 
-	\begin{threeparttable} \centering \caption{Effect of game/team prominence}\label{tab_soc_ext:reg_fe_assrate_prominent_games}
-		{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
-			\begin{tabular}{l*{5}{c}}
-				\toprule 
-				&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}\\
-				&\multicolumn{2}{c}{Rivals/derbies} & \multicolumn{3}{c}{League}\\
-				\cmidrule(lr){2-3}\cmidrule(lr){4-6}
-				& rival & non-rival & league 1 & league 2 & league 3\\
-				\midrule
-				\input{reg_fe/assrate_fixed_effects_prominent_games} 
-				\bottomrule 
-		\end{tabular}}
-		\begin{tablenotes} 
-			\item \scriptsize \emph{Notes:} The table shows estimates ..... 
-			weighted by population shares, se clustered on region-year and year-month, what do FE entail, effect size
-			Clustered standard errors are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01. \newline 	\emph{Source:} xxx.
-		\end{tablenotes} 
-	\end{threeparttable} 
-\end{table}
-\vspace*{\fill}\clearpage 
 
 
 
@@ -886,6 +858,28 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 		\end{tablenotes} 
 	\end{threeparttable} 
 \end{table}
+%--------------------------------------------
+% channels: TEAM/GAME prominence
+\vspace*{\fill}
+\begin{table}[H] \centering 
+	\begin{threeparttable} \centering \caption{Effect of game/team prominence}\label{tab_soc_ext:reg_fe_assrate_prominent_games}
+		{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
+			\begin{tabular}{l*{5}{c}}
+				\toprule 
+				&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}\\
+				&\multicolumn{2}{c}{Rivals/derbies} & \multicolumn{3}{c}{League}\\
+				\cmidrule(lr){2-3}\cmidrule(lr){4-6}
+				& rival & non-rival & league 1 & league 2 & league 3\\
+				\midrule
+				\input{reg_fe/assrate_fixed_effects_prominent_games} 
+				\bottomrule 
+		\end{tabular}}
+		\begin{tablenotes} 
+			\item \scriptsize \emph{Notes:} Estimates are based on the model shown in equation \ref{eq_soc_ext:model}. The gameday indicator is replaced by interactions with dummy variables for rival matches and league affiliation. The specifications use daily data (excluding June) spanning the time window 2011-2015 for regions that host games of a soccer team from the first three leagues of the German football league system. The outcome variable is defined as the number of assaults per million population. Population-weighted coefficients show the change in the outcome variable due to a home game. Days are defined to run from 6:00 AM until 5:59 AM the following day to accommodate the fact that offenses committed in the early hours have their origin in the preceding day. The effect size corresponds to the percent change of the assault rate due to a soccer game in relation to the mean when no game takes place. Control variables shown as \textit{Date FE} include dummies for day-of-week, month, and year. \textit{Weather controls} include air temperature (average, maximum, and minimum), minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, sun shine duration, snow depth and wind velocity. \textit{Holiday FE} is a dummy variable for public and school holidays, as well as for other peculiar days. Control variables shown as \textit{Interact FE} consist of interactions of region dummies with all elements of the date fixed effects. Two-way clustered standard errors at region-year and year-month level are reported in parentheses. \newline Significance levels: * p < 0.10, ** p < 0.05, *** p < 0.01.
+		\end{tablenotes} 
+	\end{threeparttable} 
+\end{table}
+\vspace*{\fill}\clearpage 
 %--------------------------------------------
 % robustensss: ASSAULTS and POISSON
 \vspace*{\fill}
