add placebo games

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -449,8 +449,18 @@ Due to the nonlinearity of the model, Table \ref{tab_soc_ext:assaults_poisson_fi
 Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are contained in the broad category. and in general how the penal codes of the German Criminal Code are translated into the offense key of the Police Crime Statistics.
 
 
+%--------------------------
 
-
+\vspace*{\fill}
+\begin{figure}[H]\centering
+	\caption{The effect of Placebo games}\label{fig_soc_ext:}
+	\includegraphics[width=0.9 \linewidth]{regression/robustness_placebo_games.pdf}
+	\begin{minipage}{0.95\linewidth}
+		\scriptsize{\emph{Notes:} }
+	\end{minipage}
+\end{figure}
+\vspace*{\fill}\clearpage
+%--------------------------
 
 
 
