--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -456,7 +456,7 @@ Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are contain
 	\caption{The effect of Placebo games}\label{fig_soc_ext:}
 	\includegraphics[width=0.9 \linewidth]{regression/robustness_placebo_games.pdf}
 	\begin{minipage}{0.95\linewidth}
-		\scriptsize{\emph{Notes:} }
+		\scriptsize{\emph{Notes:} The figure shows the effect of placebo games. Panel A presents the distribution of the coefficients (along with a normal density) after 10,000 iterations. Panel B shows the distribution of the t-statistics and the resulting ranges of significant coefficients, with a level of significance $\alpha=0.05$. Panel C shows the fraction of significant estimates across the number of iterations.}
 	\end{minipage}
 \end{figure}
 \vspace*{\fill}\clearpage
